🔖 [2024-05-13] 发布一个版本: v24.05.19

--- a/custom_components/lifesmart/translations/en.json
+++ b/custom_components/lifesmart/translations/en.json
@@ -10,7 +10,7 @@
           "apptoken": "App Token",
           "usertoken": "User Token ",
           "userid": "User Id",
-          "region": "LifeSmart regional region",
+          "region": "LifeSmart API region",
           "exclude": "List of device to be excluded",
           "exclude_agt": "List of hub to be excluded",
           "ai_include_agt": "List of hub to be included in Scene",
