🐛 [2025-04-28] 修复 BUG: 设置页面翻译出错问题

--- a/custom_components/lifesmart/translations/en.json
+++ b/custom_components/lifesmart/translations/en.json
@@ -30,8 +30,8 @@
           "appkey": "App Key",
           "apptoken": "App Token",
           "usertoken": "User Token ",
-          "userid": "User Id",
-          "region": "LifeSmart API region",
+          "userid": "User ID",
+          "url": "LifeSmart regional domain",
           "exclude": "List of device to be excluded",
           "exclude_agt": "List of hub to be excluded",
           "ai_include_agt": "List of hub to be included in Scene",
@@ -62,7 +62,7 @@
           "appkey": "App Key",
           "apptoken": "App Token",
           "usertoken": "User Token ",
-          "userid": "User Id",
+          "userid": "User ID",
           "url": "LifeSmart regional domain",
           "exclude": "List of device to be excluded",
           "exclude_agt": "List of hub to be excluded",
