--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -30,8 +30,8 @@
           "appkey": "应用密钥 App Key",
           "apptoken": "应用令牌 App Token",
           "usertoken": "用户令牌 User Token",
-          "userid": "User Id",
-          "region": "LifeSmart API 区域",
+          "userid": "User ID",
+          "url": "LifeSmart 区域域名",
           "exclude": "不希望集成的设备列表",
           "exclude_agt": "不希望集成的中枢列表",
           "ai_include_agt": "希望在场景中包含的中枢列表",
@@ -64,7 +64,7 @@
           "appkey": "应用密钥 App Key",
           "apptoken": "应用令牌 App Token",
           "usertoken": "用户令牌User Token",
-          "userid": "User Id",
+          "userid": "User ID",
           "url": "LifeSmart 区域域名",
           "exclude": "不希望集成的设备列表",
           "exclude_agt": "不希望集成的中枢列表",
