--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -4,7 +4,7 @@
     "step": {
       "user": {
         "title": "LifeSmart 设备集成配置",
-        "description": "请选择中枢连接方式：",
+        "description": "请选择您的 LifeSmart 中枢的连接方式：",
         "protocol_selector": {
           "label": "中枢连接方式",
           "options": {
@@ -14,63 +14,77 @@
         }
       },
       "local": {
-        "title": "LifeSmart 设备集成配置",
-        "description": "请输入您的 LifeSmart Hub 本地控制登录信息。",
+        "title": "LifeSmart 设备本地集成配置",
+        "description": "请输入您的 LifeSmart 网关本地控制登录信息。",
         "data": {
-          "host": "IP",
+          "host": "网关局域网 IP",
           "port": "端口 (默认是 8888)",
-          "username": "本地控制账号",
-          "password": "本地控制密码"
+          "username": "本地控制账号（默认 admin）",
+          "password": "本地控制密码（默认 admin）"
         }
       },
       "cloud": {
-        "title": "LifeSmart 设备集成配置",
-        "description": "请输入您的 LifeSmart 平台凭证以及个人用户信息。",
+        "title": "LifeSmart 设备云端集成配置（第 1/2 步）",
+        "description": "请输入您的 LifeSmart 平台凭据并选择一种认证方式。",
         "data": {
           "appkey": "开放应用密钥 App Key",
           "apptoken": "开放应用令牌 App Token",
-          "usertoken": "授权用户令牌 User Token",
           "userid": "手机 APP User ID",
-          "region": "授权 LifeSmart 区域",
-          "exclude": "不希望集成的设备列表",
-          "exclude_agt": "不希望集成的中枢列表",
-          "ai_include_agt": "希望在场景中包含的中枢列表",
-          "ai_include_me": "希望在场景中包含的设备列表"
+          "region": "授权 LifeSmart 服务器区域",
+          "auth_method": "认证方式"
+        }
+      },
+      "cloud_token": {
+        "title": "LifeSmart 设备云端集成配置（第 2/2 步）",
+        "description": "请输入您的用户令牌 (User Token)",
+        "data": {
+          "usertoken": "用户令牌"
+        }
+      },
+      "cloud_password": {
+        "title": "LifeSmart 设备云端集成配置（第 2/2 步）",
+        "description": "请输入你 App 账号的密码，密码将被安全地存储在 Home Assistant 中，用于刷新令牌。",
+        "data": {
+          "userpassword": "App 用户的密码"
         }
       }
     },
     "abort": {
       "already_in_progress": "当前配置流程已经在进行中",
-      "already_configured": "该设备已经完成配置。"
+      "already_configured": "此设备已经配置过了"
     },
     "error": {
-      "cannot_connect": "连接失败",
-      "invalid_auth": "验证失败",
-      "unknown": "未知/配置错误"
+      "cannot_connect": "连接失败，请检查您的网络和 IP 地址",
+      "invalid_auth": "认证失败，请检查您的凭据是否正确",
+      "unknown": "发生未知错误，请检查日志",
+      "invalid_response": "API 返回了无效的响应，请检查您的凭据和网络"
     }
   },
   "options": {
     "step": {
       "init": {
         "title": "LifeSmart 设备集成配置",
-        "description": "选择您需要编辑的配置选项",
+        "description": "为您名为 {name} 的集成选择要编辑的设置",
         "menu_options": {
-          "main_params": "主要配置参数"
+          "main_params": "主要配置参数",
+          "auth_params": "认证参数"
         }
       },
       "main_params": {
-        "title": "LifeSmart 设备集成选项",
-        "description": "请输入您的 LifeSmart 平台凭证以及个人用户信息",
+        "title": "通用设置",
+        "description": "配置设备和中枢的排除列表",
         "data": {
-          "appkey": "开放应用密钥 App Key",
-          "apptoken": "开放应用令牌 App Token",
-          "usertoken": "授权用户令牌 User Token",
-          "userid": "手机 APP User ID",
-          "region": "授权 LifeSmart 区域",
-          "exclude": "不希望集成的设备列表",
-          "exclude_agt": "不希望集成的中枢列表",
-          "ai_include_agt": "希望在场景中包含的中枢列表",
-          "ai_include_me": "希望在场景中包含的设备列表"
+          "exclude": "要排除的设备列表 (用逗号分隔)",
+          "exclude_agt": "要排除的中枢列表 (用逗号分隔)",
+          "ai_include_agt": "要在场景中包含的中枢列表 (用逗号分隔)",
+          "ai_include_me": "要在场景中包含的设备列表 (用逗号分隔)"
+        }
+      },
+      "auth_params": {
+        "title": "编辑 LifeSmart 认证参数",
+        "description": "您可以在此处更新您的认证方式或凭据。此操作将导致集成重新加载。",
+        "data": {
+          "auth_method": "认证方式"
         }
       }
     }
@@ -81,92 +95,92 @@
       "description": "向远程设备发送指定的红外按键。",
       "fields": {
         "me": {
-          "name": "Me",
-          "description": "子设备 ID"
+          "name": "子设备 ID",
+          "description": "子设备的 'me' 标识符 (例如红外发射器)"
         },
         "agt": {
-          "name": "AGT",
-          "description": "中枢设备 ID"
+          "name": "中枢 ID",
+          "description": "中枢的 'agt' 标识符"
         },
         "ai": {
-          "name": "Remote Id",
-          "description": "远程设备 ID"
+          "name": "遥控器 ID",
+          "description": "虚拟遥控器的 'ai' 标识符"
         },
         "category": {
-          "name": "Category",
-          "description": "目标设备类型"
+          "name": "类别",
+          "description": "目标设备的类别 (例如 'tv')"
         },
         "brand": {
-          "name": "Brand",
+          "name": "品牌",
           "description": "目标设备品牌"
         },
         "keys": {
-          "name": "Keys",
-          "description": "要发送的按键命令"
+          "name": "按键",
+          "description": "要发送的命令按键 (例如 'power')"
         }
       }
     },
     "send_ackeys": {
       "name": "发送空调按键",
-      "description": "发送空调红外按键",
+      "description": "向空调设备发送红外按键指令。",
       "fields": {
         "me": {
-          "name": "Me",
-          "description": "子设备 ID"
+          "name": "子设备 ID",
+          "description": "子设备的 'me' 标识符 (例如红外发射器)。"
         },
         "agt": {
-          "name": "AGT",
-          "description": "中枢设备 ID"
+          "name": "中枢 ID",
+          "description": "中枢的 'agt' 标识符。"
         },
         "ai": {
-          "name": "Remote Id",
-          "description": "远程设备 ID"
+          "name": "遥控器 ID",
+          "description": "虚拟遥控器的 'ai' 标识符"
         },
         "category": {
-          "name": "Category",
-          "description": "目标设备类型"
+          "name": "类别",
+          "description": "目标设备的类别 ('ac')"
         },
         "brand": {
-          "name": "Brand",
-          "description": "目标设备品牌"
+          "name": "品牌",
+          "description": "目标空调的品牌"
         },
         "keys": {
-          "name": "Keys",
-          "description": "要发送的按键命令"
+          "name": "按键",
+          "description": "要发送的命令按键"
         },
         "power": {
-          "name": "Power On/Off",
-          "description": "开 = 1, 关 = 0"
+          "name": "电源",
+          "description": "电源状态 (1代表开, 0代表关)"
         },
         "mode": {
-          "name": "Mode",
-          "description": "模式"
+          "name": "模式",
+          "description": "运行模式 (例如制冷、制热)"
         },
         "temp": {
-          "name": "Temperature",
+          "name": "温度",
           "description": "设置温度"
         },
         "wind": {
-          "name": "Wind Level",
-          "description": "风速"
+          "name": "风速",
+          "description": "风扇速度"
         },
         "swing": {
-          "name": "Swing Mode",
-          "description": "扫风模式"
+          "name": "扫风模式",
+          "description": "摆风/叶片模式"
         }
       }
     },
     "scene_set": {
-      "name": "Scene Set",
-      "description": "设置场景",
+      "name": "触发场景",
+      "description": "激活一个 LifeSmart 场景",
       "fields": {
         "agt": {
-          "name": "AGT",
-          "description": "中枢设备 ID"
+          "name": "中枢 ID",
+          "description": "定义了该场景的中枢的 'agt' 标识符"
         },
         "id": {
-          "name": "Scene Id",
-          "description": "远程场景 ID"
+          "name": "场景 ID",
+          "description": "要触发的场景的标识符"
         }
       }
     }
