🐛 [2025-07-15] 修复 BUG: 选项不更新问题

--- a/custom_components/lifesmart/translations/en.json
+++ b/custom_components/lifesmart/translations/en.json
@@ -6,7 +6,7 @@
         "title": "LifeSmart Integration Setup",
         "description": "Choose the connection method for your LifeSmart Hub.",
         "data": {
-          "connection_type": {
+          "type": {
             "name": "Connection Method",
             "options": {
               "local_push": "Local",
