--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -6,7 +6,7 @@
         "title": "LifeSmart 集成设置",
         "description": "请选择您的 LifeSmart 中枢的连接方式。",
         "data": {
-          "connection_type": {
+          "type": {
             "name": "连接方式",
             "options": {
               "local_push": "本地中枢",
