🐛 [2025-07-15] 修复 BUG: 选项显示问题

--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -1,6 +1,6 @@
 {
   "config": {
-    "flow_title": "{name}",
+    "flow_title": "LifeSmart: {name}",
     "step": {
       "user": {
         "title": "LifeSmart 集成设置",
