--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -6,13 +6,7 @@
         "title": "LifeSmart 集成设置",
         "description": "请选择您的 LifeSmart 中枢的连接方式。",
         "data": {
-          "type": {
-            "name": "连接方式",
-            "options": {
-              "local_push": "本地中枢",
-              "cloud_push": "云端链接"
-            }
-          }
+          "type": "连接方式"
         }
       },
       "local": {
@@ -33,13 +27,7 @@
           "apptoken": "开放应用令牌 App Token",
           "userid": "手机 APP User ID",
           "region": "授权 LifeSmart 服务器区域",
-          "auth_method": {
-            "name": "认证方式",
-            "options": {
-              "token": "用户令牌 (User Token)",
-              "password": "App 用户的密码"
-            }
-          }
+          "auth_method": "认证方式"
         }
       },
       "cloud_token": {
@@ -92,14 +80,7 @@
         "title": "编辑 LifeSmart 认证参数",
         "description": "您可以在此处更新您的认证方式或凭据。此操作将导致集成重新加载。",
         "data": {
-          "auth_method": {
-            "name": "认证方式",
-            "options": {
-              "token": "用户令牌 (User Token)",
-              "password": "App 用户的密码"
-            }
-          }
-        }
+          "auth_method": "认证方式"
       }
     }
   },
