🐛 [2025-07-16] 修复 BUG: Failed to format translation for key 'component.lifesmart.options.step.init.description' ... The intl string context variable "name" was not provided 直接修改翻译文件 (strings.json 或 zh-Hans.json)，将动态文本改为静态文本：

--- a/custom_components/lifesmart/translations/en.json
+++ b/custom_components/lifesmart/translations/en.json
@@ -60,7 +60,7 @@
     "step": {
       "init": {
         "title": "LifeSmart Integration Options",
-        "description": "Select which settings you want to edit for {name}.",
+        "description": "Select which settings you want to edit for Hub.",
         "menu_options": {
           "main_params": "General Settings",
           "auth_params": "Authentication Settings"
