🐛 [2025-07-12] 修复 BUG: 重新配置窗口翻译字段

--- a/custom_components/lifesmart/translations/en.json
+++ b/custom_components/lifesmart/translations/en.json
@@ -61,6 +61,7 @@
     },
     "abort": {
       "already_in_progress": "Configuration is already in progress.",
+      "reauth_successful": "Re-authentication successful. Please reload the integration.",
       "already_configured": "This device is already configured."
     },
     "error": {
