--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -49,6 +49,8 @@
       "already_in_progress": "当前配置流程已经在进行中",
       "reauth_successful": "重新认证成功，请重新加载集成",
       "already_configured": "此设备已经配置过了",
+      "reauth_entry_not_found": "重新认证失败，配置条目未找到",
+      "local_no_auth_params": "本地TCP模式不支持修改认证参数",
       "unknown_error": "发生未知错误，请检查日志。"
     },
     "error": {
