--- a/custom_components/lifesmart/translations/en.json
+++ b/custom_components/lifesmart/translations/en.json
@@ -239,6 +239,151 @@
         "apz": "Asia Pacific (APAC)",
         "AUTO": "Global Auto"
       }
+    },
+    "unlock_method": {
+      "options": {
+        "0": "None",
+        "1": "Password",
+        "2": "Fingerprint",
+        "3": "NFC",
+        "4": "Keys",
+        "5": "Remote",
+        "6": "12V Signal",
+        "7": "App",
+        "8": "Bluetooth",
+        "9": "Manual",
+        "15": "Error"
+      }
+    }
+  },
+  "error": {
+    "api": {
+      "10001": {
+        "description": "Invalid request format",
+        "advice": "Please verify the JSON data structure and field types conform to the API documentation."
+      },
+      "10002": {
+        "description": "AppKey does not exist",
+        "advice": "Please check that your AppKey is correctly filled in the integration configuration."
+      },
+      "10003": {
+        "description": "HTTP GET request not supported",
+        "advice": "This is a development error, this interface should use POST method."
+      },
+      "10004": {
+        "description": "Invalid signature",
+        "advice": "Please check if the signature algorithm, timestamp or credentials are correct."
+      },
+      "10005": {
+        "description": "User not authorized",
+        "advice": "Please check if the user token (UserToken) is correct, or check authorization on LifeSmart platform."
+      },
+      "10006": {
+        "description": "User authorization expired",
+        "advice": "User token (UserToken) has expired, please re-authenticate in options to get a new token."
+      },
+      "10007": {
+        "description": "Illegal access",
+        "advice": "Your IP address may not be in the whitelist, please check LifeSmart platform security settings."
+      },
+      "10008": {
+        "description": "Internal error",
+        "advice": "LifeSmart server internal unknown error occurred, please retry later or contact technical support."
+      },
+      "10009": {
+        "description": "Failed to set property",
+        "advice": "Check if device is online and supports this property setting, or view logs for detailed information."
+      },
+      "10010": {
+        "description": "Illegal method",
+        "advice": "The called API method name does not exist or has been deprecated."
+      },
+      "10011": {
+        "description": "Operation timeout",
+        "advice": "Network connection is unstable or LifeSmart server response timeout, please check your network connection."
+      },
+      "10012": {
+        "description": "Username already exists",
+        "advice": "This username has been registered, please change username."
+      },
+      "10013": {
+        "description": "Device not ready",
+        "advice": "Device may currently be offline or busy, please ensure device is online then retry."
+      },
+      "10014": {
+        "description": "Device already registered by another account",
+        "advice": "Please first unbind this device from original account, then try adding."
+      },
+      "10015": {
+        "description": "Insufficient permissions",
+        "advice": "Current account permissions are insufficient to perform this operation, please contact administrator to elevate permissions."
+      },
+      "10016": {
+        "description": "Device does not support this operation",
+        "advice": "The operation you attempted is not supported by this device model, please consult device documentation."
+      },
+      "10017": {
+        "description": "Invalid data",
+        "advice": "Parameter values or formats submitted to device are incorrect, please check."
+      },
+      "10018": {
+        "description": "GPS location illegal access denied",
+        "advice": "Please check application's geographic location permissions or related scene geofence settings."
+      },
+      "10019": {
+        "description": "Requested object does not exist",
+        "advice": "Device ID, scene ID etc. in request do not exist, please check configuration or if device has been deleted."
+      },
+      "10020": {
+        "description": "Device already exists in account",
+        "advice": "This device is already under your account, no need to add repeatedly."
+      },
+      "10022": {
+        "description": "Request address needs redirection",
+        "advice": "API server address may have changed, please try updating integration."
+      }
+    },
+    "category": {
+      "config_issues": "Configuration Issue",
+      "user_authorization": "User Authorization",
+      "security_policy": "Security Policy",
+      "permission_management": "Permission Management",
+      "server_error": "Server Error",
+      "network_issues": "Network Issue",
+      "device_operation": "Device Operation",
+      "device_management": "Device Management",
+      "data_validation": "Data Validation",
+      "method_call": "Method Call",
+      "resource_location": "Resource Location",
+      "default": "Unknown Category"
+    },
+    "recommendation": {
+      "config_issues": "Please check your LifeSmart integration configuration in Home Assistant.",
+      "user_authorization": "Please re-authenticate in \"Options\" or check your account authorization on LifeSmart platform.",
+      "security_policy": "Please check your security settings on LifeSmart developer platform, such as IP whitelist.",
+      "permission_management": "Please contact your LifeSmart account administrator to adjust permissions.",
+      "server_error": "This is usually a temporary LifeSmart server issue, please retry later or contact their technical support.",
+      "network_issues": "Please check your home network connection and internet connectivity.",
+      "device_operation": "Please check if device is online, firmware is up to date, and operation is supported by the device.",
+      "device_management": "Please manage your devices through the official LifeSmart App.",
+      "data_validation": "This is a potential integration bug, please report this issue to the developer.",
+      "method_call": "This is a potential integration bug, please report this issue to the developer.",
+      "resource_location": "Please check if the device/scene IDs referenced in related automations or scripts are correct.",
+      "default": "An unknown error occurred, please check Home Assistant logs for detailed information, or contact the integration developer."
+    },
+    "range": {
+      "api_auth": {
+        "description": "API request or authentication error"
+      },
+      "device_operation": {
+        "description": "Device operation or status error"
+      },
+      "server_internal": {
+        "description": "Server internal error"
+      },
+      "unknown": {
+        "description": "Unknown business error"
+      }
     }
   }
 }
