--- a/custom_components/lifesmart/translations/zh-Hans.json
+++ b/custom_components/lifesmart/translations/zh-Hans.json
@@ -385,5 +385,100 @@
         "description": "未知业务错误"
       }
     }
+  },
+  "entity": {
+    "io": {
+      "switch": "开关",
+      "power": "电量",
+      "temperature": "温度",
+      "humidity": "湿度",
+      "motion": "移动检测",
+      "door_lock_status": "门锁状态",
+      "alarm": "告警",
+      "brightness": "亮度控制",
+      "color": "颜色控制",
+      "color_temp": "色温控制",
+      "fan_speed": "风速",
+      "mode": "模式",
+      "status": "状态",
+      "current_state": "当前状态",
+      "target_temperature": "目标温度",
+      "current": "电流",
+      "voltage": "电压",
+      "energy": "用电量",
+      "indicator": "指示灯",
+      "sensor": "传感器数值",
+      "valve": "阀门状态",
+      "tamper": "防拆状态",
+      "button": "按键状态",
+      "vibration_status": "震动状态",
+      "water_leak_detection": "水浸检测",
+      "concentration": "浓度",
+      "illuminance": "环境光照",
+      "ambient_temperature": "环境温度",
+      "低电压报警": "低电压报警",
+      "门铃": "门铃",
+      "门锁开关状态": "门锁开关状态",
+      "入侵告警": "入侵告警",
+      "机械钥匙报警": "机械钥匙报警",
+      "恢复出厂告警": "恢复出厂告警",
+      "防撬报警": "防撬报警",
+      "劫持报警": "劫持报警",
+      "异动告警": "异动告警",
+      "火警": "火警",
+      "开锁用户编号": "开锁用户编号",
+      "是否为双开模式": "是否为双开模式",
+      "开锁方式": "开锁方式",
+      "错误报警": "错误报警",
+      "error_alarm": "错误报警",
+      "hijack_alarm": "劫持报警",
+      "tamper_alarm": "防撬报警",
+      "mechanical_key_alarm": "机械钥匙报警",
+      "low_voltage_alarm": "低电压报警",
+      "motion_alarm": "异动告警",
+      "doorbell": "门铃",
+      "fire_alarm": "火警",
+      "intrusion_alarm": "入侵告警",
+      "factory_reset_alarm": "恢复出厂告警",
+      "door_lock_switch_status": "门锁开关状态",
+      "unlock_user_id": "开锁用户编号",
+      "unlock_method": "开锁方式",
+      "double_open_mode": "是否为双开模式"
+    },
+    "command": {
+      "turn_on": "打开",
+      "turn_off": "关闭",
+      "light_on": "开灯",
+      "light_off": "关灯",
+      "open": "打开",
+      "close": "关闭",
+      "stop": "停止",
+      "play": "播放"
+    },
+    "state": {
+      "on": "打开",
+      "off": "关闭",
+      "open": "打开",
+      "closed": "关闭",
+      "stopped": "停止"
+    },
+    "device": {
+      "pm25": "PM2.5",
+      "pm10": "PM10",
+      "tvoc": "TVOC",
+      "voc": "VOC",
+      "co2_concentration": "CO2浓度",
+      "formaldehyde_concentration": "甲醛浓度",
+      "scene_switch_1": "情景开关1",
+      "scene_switch_2": "情景开关2",
+      "scene_switch_3": "情景开关3",
+      "scene_switch_4": "情景开关4",
+      "scene_switch_5": "情景开关5",
+      "scene_switch_6": "情景开关6",
+      "last_unlock_info": "最近一次开锁信息",
+      "real_time_unlock": "实时开锁",
+      "operation_record": "操作记录"
+    },
+    "config": {}
   }
 }
